--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -5,7 +5,7 @@
                 style="background-image: url(/img/placeholders/p-4.jpg)">
                 <div class="card--out card--out-1">
                     <div class="card-in--1">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link card--text-size-big">
                             Выгорание —<br>причины, симптомы, помощь
                         </a>
                     </div>
@@ -22,7 +22,7 @@
                 style="background-image: url(/img/placeholders/p-1.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link card--text-size-normal">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -34,7 +34,7 @@
                 style="background-image: url(/img/placeholders/p-5.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link card--text-size-normal">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -51,7 +51,7 @@
                 style="background-image: url(/img/placeholders/p-1.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link card--text-size-small">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -63,7 +63,7 @@
                 style="background-image: url(/img/placeholders/p-4.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link card--text-size-small">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -75,7 +75,7 @@
                 style="background-image: url(/img/placeholders/p-2.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link card--text-size-small">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
