--- a/src/html/p/vygoraniye-prichiny-simptomy-lecheniye/index.html
+++ b/src/html/p/vygoraniye-prichiny-simptomy-lecheniye/index.html
@@ -3,21 +3,30 @@
 @@include('../../../parts/head.html', {
 "title": ""
 })
+<style>
+    img{
+        border-radius: 8px;
+    }
+</style>
 
 <body>
     @@include('../../../parts/header.html', {
 
     })
 
-    <main class="container  post--font-size" style="backdrop-filter: blur(0.1rem);">
+    <main class="container post--font-size main--post" style="backdrop-filter: blur(0.1rem);">
+
+        <div class="container--post post--start-1">
+            <h1>Почему выгорание действительно проблема?</h1>
+            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+        </div>
+
+        <figure class="post--start-img text-center">
+            <img src="/img/placeholders/p-1.jpg" alt="">
+            <figcaption class="img--desc">Деревянная скульптура</figcaption>
+        </figure>
 
         <div class="container--post">
-
-            <div class="post--start">
-                <h1>Почему выгорание действительно проблема?</h1>
-                <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
-            </div>
-
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, quis!
             </p>
