--- a/src/html/about.html
+++ b/src/html/about.html
@@ -9,44 +9,7 @@
 
     })
 
-    <div class="container py-5">
-        <div class="row flex-lg-row-reverse align-items-center row-cols-1 row-cols-lg-2">
-            <div class="col">
-                <img src="/img/content/main--special.png" class="d-block mx-lg-auto img-fluid"
-                    alt="Фотография 3д текста Спешиал" width="700" height="500">
-            </div>
-            <div class="col">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы каждую неделю</h1>
-                <p class="fs-5">
-                    Читайте статьи про программирование. В удобном формате: Телеграм, Яндекс Дзен,
-                    news.creagoo.ru.
-                </p>
-                <p class="fs-5">
-                    Занимайте время полезной информацией вместе со Спешиал.
-                </p>
-                <div class="d-flex align-items-center">
-                    <div>
-                        <a href="/about.html" class="header--nav-link fs-4">
-                            О проекте
-                        </a>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" class="ms-3" viewBox="0 0 16 16"
-                        fill="#9d9d9d">
-                        <path
-                            d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
-                    </svg>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <main>
-
-        @@include('../parts/p--main.html', {
-
-        })
-
-    </main>
+    about page
 
     @@include('../parts/footer.html', {
 
