--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,3 +1,18 @@
+<nav class="navbar sticky-bottom  navbar-expand-lg bg-white--adaptive text-white--adaptive">
+    <div class="container-fluid py-2">
+        <div class="d-flex flex-wrap align-items-center">
+            <div class="me-auto">
+                <p class="text-white--adaptive mb-0">Мы используем файлы cookie для Вашего удобства</p>
+            </div>
+            <div>
+                <button>
+                    Хорошо
+                </button>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <footer class="footer--main">
     <div class="container container--main">
         <div class="container mb-3 text-center">
