--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-            <a href="/privacypolicy.html" class="footer--more footer--more-link">Политика конфиденциальности</a>
+            <a href="/privacy/" class="footer--more footer--more-link">Политики</a>
             <a href="mailto:daniil@creagoo.ru" class="footer--more footer--more-link">daniil@creagoo.ru</a>
             <a href="/en/" class="footer--more footer--more-link">Английская версия</a>
             <a href="/about.html" class="footer--more footer--more-link ">Подробнее</a>
