--- a/src/html/p/example/index.html
+++ b/src/html/p/example/index.html
@@ -12,8 +12,8 @@
 
         <div class="post--bg-image" style="background-image: url('/img/posts/p017/cap.jpg')">
 
-            @@include('../../../parts/header.html', {
-                "newpostformat": "true"
+            @@include('../../../parts/header-post.html', {
+
             })
 
             <div class="post--bg-image-block">
