--- a/src/parts/header-post.html
+++ b/src/parts/header-post.html
@@ -5,9 +5,10 @@
                 <div class="d-flex">
                     <div class="header--adaptive-button me-2">
                         <div class="text-invert-dark btn-rounded fs-5">
-                            <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему" class="btn btn-light px-4 py-2 d-flex header--button
+                            <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему" class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
                                                     text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                                    viewBox="0 0 16 16">
                                     <use id="changethemesvg" xlink:href="/img/icons/theme.svg#light"></use>
                                 </svg>
                                 Тема
@@ -16,9 +17,10 @@
                     </div>
                     <div class="header--adaptive-button me-2">
                         <div class="btn-rounded fs-5">
-                            <button onClick="ChangeBackground()" aria-label="Сменить задний фон" class="btn btn-light px-4 py-2 d-flex header--button
+                            <button onClick="ChangeBackground()" aria-label="Сменить задний фон" class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
                                                     text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                                    viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
                                 </svg>
@@ -32,7 +34,7 @@
             <!-- PC -->
             <div class="nav col-12 col-md-auto header--logo-pc mb-2 justify-content-center mb-md-0">
                 <a href="/" aria-label="Перейти на главную страницу" class="d-block header--logo-pc">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon header--logo-pc header--logo"
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="header--logo-pc header--logo"
                         viewBox="0 0 1211.79 303.25">
                         <path
                             d="M877.07 167.05a62 62 0 0 1-13.94 31.84 76.34 76.34 0 0 1-29.5 21.48q-18 7.65-40.24 7.65-25.17 0-44.3-9.26t-29.87-26q-10.74-16.78-10.74-38.5 0-22 10.74-38.63t29.87-26.05q19.13-9.37 44.3-9.38 22.22 0 40.24 7.78a78.08 78.08 0 0 1 29.5 21.47 61.56 61.56 0 0 1 13.94 32h-41.22q-3.21-14.31-14.69-22.09t-27.77-7.78q-13.08 0-22.83 5.06a34.94 34.94 0 0 0-14.93 14.57q-5.19 9.5-5.19 23.08 0 13.32 5.19 22.83a34.86 34.86 0 0 0 14.93 14.56q9.75 5.07 22.83 5.06 16.55 0 28-8.14a34.85 34.85 0 0 0 14.44-21.48ZM919.79 67.82q-11.12 0-18.14-5.8a19 19 0 0 1-7-15.43q0-9.87 7-15.67t18.14-5.8q11.34 0 18.26 5.8t6.92 15.67q0 9.63-6.92 15.43t-18.26 5.8ZM899.3 82.39l20.49 3.94 20.73-3.94v141.93h-41.23ZM1111.08 154.22q-4 22.22-14.44 38.87a75.44 75.44 0 0 1-26.41 25.8 70.51 70.51 0 0 1-35.67 9.13q-20.49 0-36.29-9.26a63.79 63.79 0 0 1-24.56-25.91q-8.76-16.67-8.76-38.63 0-22.21 8.76-38.88a63.75 63.75 0 0 1 24.56-25.92q15.8-9.25 36.29-9.26a70.41 70.41 0 0 1 35.67 9.14 76.41 76.41 0 0 1 26.56 25.79q10.59 16.66 14.29 39.13Zm-104.42 0a45 45 0 0 0 5.07 21.72 37.4 37.4 0 0 0 13.94 14.68 39.18 39.18 0 0 0 20.49 5.31 46.79 46.79 0 0 0 21.84-5.31 59.24 59.24 0 0 0 18.15-14.68 70.51 70.51 0 0 0 12.34-21.72 72.12 72.12 0 0 0-12.34-21.85 58.68 58.68 0 0 0-18.15-14.81 46.79 46.79 0 0 0-21.84-5.31 39.18 39.18 0 0 0-20.49 5.31 37.29 37.29 0 0 0-13.94 14.81 45.73 45.73 0 0 0-5.07 21.85Zm93.56 70.1-5.93-51.34 6.67-18.76-6.67-18.54 5.93-51.83h42.7l-8.13 70.37 8.14 70.1ZM1170.57 34.25h41.22v190.07h-41.22Z" />
@@ -56,8 +58,9 @@
                     <div class="header--adaptive-button">
                         <div class="text-invert-dark btn-rounded fs-5">
                             <a href="/write-post.html" aria-label="Написать статью для спешиал"
-                                class="btn btn-light px-4 d-flex header--button text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1" viewBox="0 0 16 16">
+                                class="btn btn-light px-4 d-flex header--button btn-light--post text-decoration-none text-invert-dark align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                                    viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                                 </svg>
@@ -99,59 +102,59 @@
         <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
             @@if(context.activeItem == "posts") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active header--article-link text-lowercase h3 mb-0">СТАТЬИ</p>
+                <p class="nav-link header--nav-link-active header--article-link text-white text-lowercase h3 mb-0">СТАТЬИ</p>
             </li>
             }
             @@if(context.activeItem != "posts") {
             <li class="mx-2 px-3"><a href="/p/"
-                    class="nav-link h3 header--article-link text-lowercase header--nav-link">СТАТЬИ</a></li>
+                    class="nav-link h3 header--article-link text-lowercase text-white header--nav-link">СТАТЬИ</a></li>
             }
 
             @@if(context.activeItem == "updates") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0">ОБНОВЛЕНИЯ</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link text-white text-lowercase mb-0">ОБНОВЛЕНИЯ</p>
             </li>
             }
             @@if(context.activeItem != "updates") {
             <li class="mx-2 px-3"><a href="/updates/"
-                    class="nav-link header--article-link h3 text-lowercase header--nav-link">ОБНОВЛЕНИЯ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ОБНОВЛЕНИЯ</a></li>
             }
 
             @@if(context.activeItem == "games") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0">ИГРЫ</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link text-white text-lowercase mb-0">ИГРЫ</p>
             </li>
             }
             @@if(context.activeItem != "games") {
             <li class="mx-2 px-3"><a href="/games/"
-                    class="nav-link header--article-link h3 text-lowercase header--nav-link">ИГРЫ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ИГРЫ</a></li>
             }
 
             @@if(context.activeItem == "tech") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0">ТЕХНИКА</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link text-white text-lowercase mb-0">ТЕХНИКА</p>
             </li>
             }
             @@if(context.activeItem != "tech") {
             <li class="mx-2 px-3"><a href="/tech/"
-                    class="nav-link header--article-link h3 text-lowercase header--nav-link">ТЕХНИКА</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ТЕХНИКА</a></li>
             }
 
             @@if(context.activeItem == "more") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0">ЕЩЕ</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link v text-lowercase mb-0">ЕЩЕ</p>
             </li>
             }
             @@if(context.activeItem != "more") {
             <li class="mx-2 px-3"><a href="/more/"
-                    class="nav-link header--article-link h3 text-lowercase header--nav-link">ЕЩЕ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ЕЩЕ</a></li>
             }
         </ul>
     </nav>
 </div>
 
-<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px; background-image: var(--bg-image);" id="mobileMenu"
-    aria-labelledby="mobileMenuLabel">
+<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px; background-image: var(--bg-image);"
+    id="mobileMenu" aria-labelledby="mobileMenuLabel">
     <div class="offcanvas-header pt-4">
         <div class="offcanvas-title">
             <a href="/" aria-label="Перейти на главную страницу">
@@ -210,7 +213,7 @@
                             d="M11.5 6.027a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1.5 1.5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm2.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1.5 1.5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm-6.5-3h1v1h1v1h-1v1h-1v-1h-1v-1h1v-1z" />
                         <path
                             d="M3.051 3.26a.5.5 0 0 1 .354-.613l1.932-.518a.5.5 0 0 1 .62.39c.655-.079 1.35-.117 2.043-.117.72 0 1.443.041 2.12.126a.5.5 0 0 1 .622-.399l1.932.518a.5.5 0 0 1 .306.729c.14.09.266.19.373.297.408.408.78 1.05 1.095 1.772.32.733.599 1.591.805 2.466.206.875.34 1.78.364 2.606.024.816-.059 1.602-.328 2.21a1.42 1.42 0 0 1-1.445.83c-.636-.067-1.115-.394-1.513-.773-.245-.232-.496-.526-.739-.808-.126-.148-.25-.292-.368-.423-.728-.804-1.597-1.527-3.224-1.527-1.627 0-2.496.723-3.224 1.527-.119.131-.242.275-.368.423-.243.282-.494.575-.739.808-.398.38-.877.706-1.513.773a1.42 1.42 0 0 1-1.445-.83c-.27-.608-.352-1.395-.329-2.21.024-.826.16-1.73.365-2.606.206-.875.486-1.733.805-2.466.315-.722.687-1.364 1.094-1.772a2.34 2.34 0 0 1 .433-.335.504.504 0 0 1-.028-.079zm2.036.412c-.877.185-1.469.443-1.733.708-.276.276-.587.783-.885 1.465a13.748 13.748 0 0 0-.748 2.295 12.351 12.351 0 0 0-.339 2.406c-.022.755.062 1.368.243 1.776a.42.42 0 0 0 .426.24c.327-.034.61-.199.929-.502.212-.202.4-.423.615-.674.133-.156.276-.323.44-.504C4.861 9.969 5.978 9.027 8 9.027s3.139.942 3.965 1.855c.164.181.307.348.44.504.214.251.403.472.615.674.318.303.601.468.929.503a.42.42 0 0 0 .426-.241c.18-.408.265-1.02.243-1.776a12.354 12.354 0 0 0-.339-2.406 13.753 13.753 0 0 0-.748-2.295c-.298-.682-.61-1.19-.885-1.465-.264-.265-.856-.523-1.733-.708-.85-.179-1.877-.27-2.913-.27-1.036 0-2.063.091-2.913.27z" />
-                        </svg>
+                    </svg>
                     Игры
                 </span>
             </a>
