--- a/src/html/p/example/index.html
+++ b/src/html/p/example/index.html
@@ -18,12 +18,14 @@
 
             <div class="post--bg-image-block">
                 <div class="post--bg-image-top">
-                    <h1>Интересное название тестовой записи</h1>
-                    <p class="post--start-p">Некоторое небольшое содержимое.</p>
+                    <h1 class="head--static-font">Интересное название тестовой записи</h1>
+                    <p class="post--start-p subhead--static-font">Некоторое небольшое содержимое.</p>
                 </div>
                 <div class="post--bg-image-bottom">
                     <div class="text-white">
-                        123
+                        <a href="/author/daniildybka" class="link-white">
+                            Даниил Дыбка
+                        </a>
                     </div>
                 </div>
             </div>
@@ -51,7 +53,7 @@
 
             <div class="container--post post--more">
                 <p class="post--more-text mb-0">Автор:
-                    <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
+                    <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
                 </p>
                 <p class="post--more-text mb-0">02.02.23 12:00</p>
             </div>
