--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -164,7 +164,7 @@
 
         <div class="container--post post--more">
             <p class="post--more-text mb-0">Автор:
-                <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
+                <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
             </p>
             <p class="post--more-text mb-0">06.02.23 12:00</p>
         </div>
