--- a/src/html/p/which-macbooks-are-really-worth-getting/index.html
+++ b/src/html/p/which-macbooks-are-really-worth-getting/index.html
@@ -199,7 +199,7 @@
 
         <div class="container--post post--more">
             <p class="post--more-text mb-0">Автор:
-                <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
+                <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
             </p>
             <p class="post--more-text mb-0">16.04.23 14:00</p>
         </div>
