--- a/src/html/tech/macbook-pro-2014-13-review/index.html
+++ b/src/html/tech/macbook-pro-2014-13-review/index.html
@@ -278,7 +278,7 @@
 
         <div class="container--post post--more">
             <p class="post--more-text mb-0">Автор:
-                <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
+                <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
             </p>
             <p class="post--more-text mb-0">02.02.23 12:00</p>
         </div>
