--- a/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
+++ b/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
@@ -102,7 +102,7 @@
 
         <div class="container--post post--more">
             <p class="post--more-text mb-0">Автор:
-                <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
+                <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
             </p>
             <p class="post--more-text mb-0">25.03.23 12:00</p>
         </div>
