--- a/src/html/updates/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/novyy-sayt-creagoo-ru/index.html
@@ -146,7 +146,7 @@
 
         <div class="container--post post--more">
             <p class="post--more-text mb-0">Автор:
-                <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
+                <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
             </p>
             <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
