--- a/src/parts/header-post.html
+++ b/src/parts/header-post.html
@@ -1,17 +1,18 @@
-<div class="header--backdrop">
+<div class="header--backdrop" style="background: linear-gradient(0deg, transparent, rgba(0, 0, 0, .65));">
     <header class="header--main">
         <div class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
             <div class="col-md-3 mb-2 mb-md-0 header--logo-pc">
                 <div class="d-flex">
                     <div class="header--adaptive-button me-2">
                         <div class="text-invert-dark btn-rounded fs-5">
-                            <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему" class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
+                            <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему"
+                            class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
                                                     text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="me-btn-1"
                                     viewBox="0 0 16 16">
                                     <use id="changethemesvg" xlink:href="/img/icons/theme.svg#light"></use>
                                 </svg>
-                                Тема
+                                <span class="text-white">Тема</span>
                             </button>
                         </div>
                     </div>
@@ -19,12 +20,12 @@
                         <div class="btn-rounded fs-5">
                             <button onClick="ChangeBackground()" aria-label="Сменить задний фон" class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
                                                     text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="me-btn-1"
                                     viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
                                 </svg>
-                                Фон
+                                <span class="text-white">Фон</span>
                             </button>
                         </div>
                     </div>
@@ -59,12 +60,12 @@
                         <div class="text-invert-dark btn-rounded fs-5">
                             <a href="/write-post.html" aria-label="Написать статью для спешиал"
                                 class="btn btn-light px-4 d-flex header--button btn-light--post text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="me-btn-1"
                                     viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                                 </svg>
-                                Статья
+                                <span class="text-white">Статья</span>
                             </a>
                         </div>
                     </div>
@@ -98,7 +99,7 @@
         </div>
     </header>
 
-    <nav class="container nav--main header--adaptive-nav">
+    <nav class="container mb-0 nav--main header--adaptive-nav">
         <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
             @@if(context.activeItem == "posts") {
             <li class="mx-2 px-3">
@@ -107,7 +108,7 @@
             }
             @@if(context.activeItem != "posts") {
             <li class="mx-2 px-3"><a href="/p/"
-                    class="nav-link h3 header--article-link text-lowercase text-white header--nav-link">СТАТЬИ</a></li>
+                    class="nav-link h3 header--article-link text-lowercase text-white header--nav-link-white">СТАТЬИ</a></li>
             }
 
             @@if(context.activeItem == "updates") {
@@ -127,7 +128,7 @@
             }
             @@if(context.activeItem != "games") {
             <li class="mx-2 px-3"><a href="/games/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ИГРЫ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link-white">ИГРЫ</a></li>
             }
 
             @@if(context.activeItem == "tech") {
@@ -137,7 +138,7 @@
             }
             @@if(context.activeItem != "tech") {
             <li class="mx-2 px-3"><a href="/tech/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ТЕХНИКА</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link-white">ТЕХНИКА</a></li>
             }
 
             @@if(context.activeItem == "more") {
@@ -147,7 +148,7 @@
             }
             @@if(context.activeItem != "more") {
             <li class="mx-2 px-3"><a href="/more/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ЕЩЕ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link-white">ЕЩЕ</a></li>
             }
         </ul>
     </nav>
